--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "serve": "parcel public/index.html --open"
   },
   "repository": {
     "type": "git",
@@ -17,8 +18,10 @@
   },
   "homepage": "https://github.com/doxyme/media-access#readme",
   "dependencies": {
-    "bowser": "1.9.4",
     "hark": "^1.2.3",
     "wolfy87-eventemitter": "^5.2.6"
+  },
+  "devDependencies": {
+    "parcel-bundler": "^1.12.3"
   }
 }
